Fixed book image alignment in books page

--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -1204,7 +1204,7 @@ input, select, textarea {
 	align-items: center;
 	flex-direction: column;
 	margin-top: 1em;
-	font-size: 1.5em;
+	font-size: 1em;
 	width: 50%;
 }
 
@@ -1218,28 +1218,44 @@ input, select, textarea {
 	width: 50%;
 }
 
-.childrensBooks {
+.childrensBooks,
+.childrensBooks2{
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
 	width: 100%;
+	height: 25%;
 }
 
-.childrensBooks li a {
+.childrensBooks li,
+.childrensBooks2 li {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	width: 100%;
+	width: 30%;
 }
 
-.childrensBooks li img {
+.childrensBooks li p,
+.childrensBooks2 li p {
 	display: flex;
-	width: 75%;
-	height: 75%;
+	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	width: 90%;
+	text-decoration: none;
+	color: black;
+	font-size: 1em;
 }
 
+.childrensBooks li img,
+.childrensBooks2 li img {
+	display: flex;
+	width: 40%;
+	height: 70%;
+	align-items: center;
+	justify-content: center;
+}
 
 
 .books {
